--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,22 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# não vai exibir as exceptions
 server.error.include-exception=false
+
+# não vai exibir o stacktrace
 server.error.include-stacktrace=never
+
+# vai exibir as mensagens
 server.error.include-message=always
 
+# url para subir no postgresql: passa a porta e o nome do banco
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
 spring.datasource.password=123
 spring.datasource.username=admin
 
+# vai mostrar o sql
 spring.jpa.show-sql=true
+
+# vai verificar se existe a tabela criada (não é recomendado em ambiente de produção, apenas em testes)
 spring.jpa.hibernate.ddl-auto=update
